--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryb73/bs-winston-gcloud",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Bucklescript bindings for https://github.com/googleapis/nodejs-logging-winston/",
   "main": "index.js",
   "repository": {
@@ -22,7 +22,7 @@
   "author": "Ryan",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Warning: no test specified\"",
     "build": "npm run clean && bsb -make-world",
     "watch": "npm run clean && bsb -make-world -w",
     "clean": "rm -rf lib && bsb -clean-world",
