--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "url": "git@github.com:ryb73/bs-winston-gcloud.git"
   },
   "files": [
-    "/lib/js/src",
     "/bsconfig.json",
     "/src"
   ],
@@ -34,10 +33,14 @@
     "postinstall": "[ ! -f package-links.json ] || ppl link-file"
   },
   "peerDependencies": {
-    "bs-platform": "^5.0.0"
+    "bs-platform": "5 || 6 || 7 || 8"
   },
   "dependencies": {
-    "@google-cloud/logging-winston": "^0.11.1",
+    "@google-cloud/logging-winston": "^4.0.0",
     "@ryb73/bs-winston": "^0.1.1"
+  },
+  "devDependencies": {
+    "bs-platform": "^8.0.3",
+    "winston": "^3.3.3"
   }
 }
